@@ -10,6 +10,7 @@ use List::Util 1.33 qw( any );
 use Package::Stash;
 use Params::Util qw( _HASH0 );
 use Sub::Install;
+use Sub::Name qw( subname );
 
 sub import {
     shift;
@@ -36,7 +37,7 @@ sub import {
 
     Sub::Install::install_sub(
         {
-            code => $import,
+            code => subname( $caller . '::import', $import ),
             into => $caller,
             as   => 'import',
         }
@@ -44,7 +45,7 @@ sub import {
 
     Sub::Install::install_sub(
         {
-            code => $warn,
+            code => subname( $caller . '::deprecated', $warn ),
             into => $caller,
             as   => 'deprecated',
         }
