@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- The subs installed into the caller are now named with Sub::Name. This makes
+  these subs appear to be part of the caller, as opposed to an import, which
+  is what we want, since each installed sub is constructed uniquely for a
+  given package.
+
+
 0.15     2015-11-13
 
 - Made this module co-operate with existing import() subs in packages that use
